# nexo-btc-dca

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile
backend/app/: logic.py  main.py  models.py  storage.py
backend/tests/: test_logic.py  test_packaging.py  test_persistence.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  AppView.tsx  mock.ts  styles.css  types.ts
frontend/tests/: app-view.test.tsx  app.test.tsx
