[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexo-btc-dca-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8"
]

[tool.setuptools]
packages = { find = { include = ["backend", "backend.*"] } }

[tool.pytest.ini_options]
pythonpath = ["backend"]
